--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
 <head>
   <title>Welcome to Sunshine City!</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
   <!-- Vue.js -->
-  <script src="lib/js/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
+
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="lib/css/bootstrap.css">
-  <script src="https://unpkg.com/v-tooltip"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
   <!-- Vue.js tooltip plugin -->
+  <script src="https://unpkg.com/v-tooltip"></script>
   <link rel="stylesheet" href="lib/css/tooltip.css">
-  <link rel="stylesheet" href="lib/css/tooltip.css">
+
   <!-- Vue.js toast plugin -->
   <script src="https://unpkg.com/vue-toasted"></script>
+  
   <!-- fonts and icons-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:400,700&display=swap">
   <link rel="stylesheet" href="lib/css/fontawesome/css/all.css">
