hide tooltip on mobile

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
   <!-- Vue.js toast plugin -->
   <script src="https://unpkg.com/vue-toasted"></script>
+
+  <!-- Vue.js modal plugin -->
+  <script src="https://unpkg.com/vue-js-modal"></script>
   
   <!-- fonts and icons-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:400,700&display=swap">
